--- a/app/src/main/res/layout/tela_teste.xml
+++ b/app/src/main/res/layout/tela_teste.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9d9dff"
-    tools:context=".MainActivity">
+    tools:context=".view.activity.DetailsActivity">
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
