--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,36 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="titulo"
-            type="String" />
-    </data>
-
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/itembackground"
+        android:id="@+id/itemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#191919"
-        android:orientation="horizontal">
-        
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/poster_id"
-        android:layout_width="100dp"
-        android:layout_height="130dp"
-        app:srcCompat="@drawable/annabelle" />
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal"
+        android:background="@drawable/customborder_movielist">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tituloTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="50dp"
-        android:textSize="25sp"
-        android:text="@{titulo}"
-        android:textColor="@color/white"
-        tools:text="Annabelle"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="#808080">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/poster_id"
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/annabelle" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tituloTV"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="50dp"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                app:layout_constraintStart_toEndOf="@id/poster_id"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="Annabelle" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
