--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -35,6 +35,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:text="Annabelle" />
 
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:id="@+id/favorite_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:button="@drawable/custom_checkbox"
+                />
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
